--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-jw-player",
-  "version": "1.19.0",
+  "version": "1.19.1",
   "description": "A React component for launching JW Player instances on the client.",
-  "main": "dist/react-jw-player.js",
+  "main": "src/react-jw-player.jsx",
   "scripts": {
     "build": "babel src --out-dir dist",
     "clean": "rimraf dist",
