--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-jw-player",
   "version": "1.19.1",
   "description": "A React component for launching JW Player instances on the client.",
-  "main": "src/react-jw-player.jsx",
+  "main": "dist/react-jw-player.js",
   "scripts": {
     "build": "babel src --out-dir dist",
     "clean": "rimraf dist",
